--- a/src/pages/channels/channels.html
+++ b/src/pages/channels/channels.html
@@ -1,12 +1,6 @@
-<!--
-  Generated template for the ChannelsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
-    <ion-title>ChannelsPage</ion-title>
+    <ion-title>Channels</ion-title>
   </ion-navbar>
 </ion-header>
 
