--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -19,7 +19,7 @@
       <ion-row>
         <div>
           <button ion-button (click)='navigateToPage("RegisterPage")' color='secondary'>Register</button>
-          <button ion-button (click)='navigateToPage("InboxPage")'>Login</button>
+          <button ion-button (click)='navigateToPage("TabsPage")'>Login</button>
         </div>
       </ion-row>
     </ion-card-content>
