Create user and messages mock data and console.log them on inbox page

--- a/src/pages/inbox/inbox.html
+++ b/src/pages/inbox/inbox.html
@@ -5,5 +5,13 @@
 </ion-header>
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-item>
+      <ion-avatar item-left>
+        <img src='assets/imgs/avatar.png' alt='Avatar' />
+      </ion-avatar>
+      <h2>Jack Neligan</h2>
+      <p>I've just loaded a new video</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
