--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,22 +6,5 @@
 
 <ion-content padding>
   <img src='assets/imgs/logo.png' alt='logo' />
-  <ion-card>
-    <ion-card-content>
-      <ion-item>
-        <ion-label floating>Email Address</ion-label>
-        <ion-input type='text'></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label floating>Password</ion-label>
-        <ion-input type='password'></ion-input>
-      </ion-item>
-      <ion-row>
-        <div>
-          <button ion-button (click)='navigateToPage("RegisterPage")' color='secondary'>Register</button>
-          <button ion-button (click)='navigateToPage("TabsPage")'>Login</button>
-        </div>
-      </ion-row>
-    </ion-card-content>
-  </ion-card>
+  <app-login-form></app-login-form>
 </ion-content>
