--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content padding>
-  <app-register-form></app-register-form>
+  <app-register-form (registerStatus)='register($event)'></app-register-form>
 </ion-content>
