--- a/src/pages/inbox/inbox.html
+++ b/src/pages/inbox/inbox.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>Inbox</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)='navigateToSearchUserPage()'>
+        <ion-icon name='add'></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
